# Version History

## unreleased

* MCCS-409 - Race condition workaround
* MCCS-335 - Added typehints to MCCS controller_device
* MCCS-384 - docstring coverage to 100%
* MCCS-378 - Support for simulators with dynamic values
* MCCS-116 - Add station beam health monitoring to MCCS Station

## 0.7.0

* MCCS-381 - Move "Configure" command implementation to station beams resource manager
* MCCS-368 - Update resource usage
* MCCS-258 - Update of TPI Tango device to obDevice of lmcBaseClasses
* MCCS-359 - Add scan, abort and obsreset unit tests
* MCCS-379 - Diagnose and fix/workaround PSI subrack/APIU bug
* MCCS-239 - Subarray scan implementation
* MCCS-334 - Fix unsafe dictionary look-ups
* MCCS-252 - New and modified Tile commands for beam configuration and calibration
* MCCS-374 - Correct initialisation values for controller commandResult
* MCCS-309 - Integration of devices into end-to-end power flow
* MCCS-307 - Add PSI chart configuration

## 0.6.0

* MCCS-366 - Updates to APIU and Antenna
* MCCS-253 - Add simulation of ARP resolution to TPM simulator
* MCCS-371 - Replace plantuml markup with static svgs
* MCCS-302 - Updates for PI#9 json strings according to:
             https://confluence.skatelescope.org/pages/viewpage.action?pageId=110799390
* MCCS-370 - Async mechanism for subarray ObsReset command
* MCCS-180 - updated power management, new subrack device, MccsController.Startup()
* MCCS-317 - Basic Abort and ObsReset implementation
* MCCS-361 - robust device connection
* MCCS-320 - deployment bugfixes and move to hyphenated make targets
* MCCS-350 - Set commandResult to UNKNOWN before MccsController commands are executed
* MCCS-345 - Basic connect to "turn on" TPM1.2 in Simulator
* MCCS-272 - SubArrayBeam device - implement stub device
* MCCS-251 - Software control of physical Tile Processing Board

## 0.5.0

* MCCS-169 - Add configure to subarray
* MCCS-313 - MCCS Tile WebJive pages
* MCCS-325 - minikube and WebJive setup