@@ -67,8 +67,8 @@ class TestMccsIntegration:
         tile_4 = device_context.get_device("tile_0004")
 
         # check initial state
-        assert subarray_1.stationFQDNs is None
-        assert subarray_2.stationFQDNs is None
+        assert subarray_1.stationFQDNs == ()
+        assert subarray_2.stationFQDNs == ()
         assert station_1.subarrayId == 0
         assert station_2.subarrayId == 0
         assert tile_1.subarrayId == 0
@@ -90,7 +90,7 @@ class TestMccsIntegration:
 
         # check that station_1 and only station_1 is allocated
         assert list(subarray_1.stationFQDNs) == [station_1.dev_name()]
-        assert subarray_2.stationFQDNs is None
+        assert subarray_2.stationFQDNs == ()
         assert station_1.subarrayId == 1
         assert station_2.subarrayId == 0
         assert tile_1.subarrayId == 1
@@ -111,7 +111,7 @@ class TestMccsIntegration:
 
         # check no side-effects
         assert list(subarray_1.stationFQDNs) == [station_1.dev_name()]
-        assert subarray_2.stationFQDNs is None
+        assert subarray_2.stationFQDNs == ()
         assert station_1.subarrayId == 1
         assert station_2.subarrayId == 0
         assert tile_1.subarrayId == 1
@@ -123,7 +123,7 @@ class TestMccsIntegration:
         # because the already allocated station is allocated to the same
         # subarray, BUT we must remember that the subarray cannot reallocate
         # the same subarray_beam.
-        # ToDo This will change when subarray_beam is not a list.
+        # TODO This will change when subarray_beam is not a list.
         ((result_code,), (message,)) = call_with_json(
             controller.Allocate,
             subarray_id=1,
@@ -138,7 +138,7 @@ class TestMccsIntegration:
             station_1.dev_name(),
             station_2.dev_name(),
         ]
-        assert subarray_2.stationFQDNs is None
+        assert subarray_2.stationFQDNs == ()
         assert station_1.subarrayId == 1
         assert station_2.subarrayId == 1
         assert tile_1.subarrayId == 1
